--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
     - text: "Experience"
       href: experience.html
     - text: "Plotly"
-      href: plotly.html
+      href: Plotly.html
     - text: "Dashboard"
       href: dashboard.html
     - icon: fa-envelope fa-lg
